--- a/ejercicio1.html
+++ b/ejercicio1.html
@@ -6,15 +6,17 @@
 </title>
 <style>
 p {
-	width:400px;
-	height:400px;
+	margin-top:100px;
+	margin-left:100px;
+	width:200px;
+	height:200px;
 	background-color:yellow;
-	border:5px solid orange;
+	border:10px solid orange;
 	box-shadow:
-	0 0 0 5px red,
-	0 0 0 10px purple,
-	0 0 0 15px blue,
-	0 0 0 20px green;
+	0 0 0 10px red,
+	0 0 0 20px purple,
+	0 0 0 30px blue,
+	0 0 0 40px green;
 }
 </style>
 </head>
