--- a/HTML/firsthtml.html
+++ b/HTML/firsthtml.html
@@ -2,10 +2,43 @@
 <html lang="es">
 <head>
 	<title>HTML</title>
+	<style>
+	header{
+		background-color: black;
+		color:white;
+		border-bottom:5px solid grey;
+		background-color:black;
+		font-family: Arial, Helvetica, sans-serif;
+	}
+
+	p{
+		padding-top: 100px;
+		text-align: justify;
+		text-decoration: none;	
+		font-family: Arial, Helvetica, sans-serif;
+		letter-spacing: 3px;
+		line-height: 1.8;
+		font-size:20px;
+		}
+
+	img{
+		float:left;
+		text-align: justify;
+		}
+	header{
+		text-decoration: bold;
+		margin-top:20px;
+		font-size:40px;
+		text-align:center;
+	}
+</style>
 </head>
 <body>
-	<h1>Hyper Text Markup Language</h1><br><hr>
-	<h2>Elementos</h2>
+	<header id="INTRO">Introducción</header>
+		<p> 
+			<img src="../IMAGES/html.png" alt="Logo" height="258.5px" width="300px"> HTML es un lenguaje estandarizado para la programación de páginas web.<br><br><br><br><br><br><br><br><br><br><br><br><br><hr>
+		</p>
+	<header id="P1">Elementos</header>
 		<p>!DOCTYPE html = HTML5<br>
 			&lttag&gt<br>
 			&lthtml&gt = raiz<br>
@@ -14,39 +47,39 @@
 			&ltbody&gt = parte visible del documento<br>
 			&lth1&gt = encabezado largo<br>
 			&ltp&gt = parrafo<br>
-			&lt/endtag&gt<br><hr>
+			&lt/endtag&gt<br>
 		</p>
-	<h2>TextEdit </h2>
+	<header id="P2">TextEdit </header>
 		<p>Preferences-> Format-> Plain text<br>
 			archivo.htm<br>
-			UTF-8 ENCODING<br><hr>
+			UTF-8 ENCODING<br>
 		</p>
-	<h2>Atributos de los elementos</h2>
+	<header id="P3">Atributos de los elementos</header>
 		<p>&lta href="URL"&gtText&lt/a&gt -> Links<br>
 			&ltimg src="imagen.ext" alt="text" width="111" heigth="111"&gt -> Imagen<br>
 			&ltp style="color:XXXX"&gt<br>
 			&lthtml lang="en-US"&gt<br>
 			&ltp title="leyenda"&gt<br>
-			*Comillas simples entre comillas dobles<br><hr>
+			*Comillas simples entre comillas dobles<br>
 		</p>
-	<h2>Encabezados</h2>
+	<header id="P4">Encabezados</header>
 		<p>h-num; num= tamaño de la letra (1-6)<br>
 			&lth1 style="font-size:XXXXpx;"&gt<br>
-			&lthr&gt -> Línea horizontal<br><hr>
+			&lthr&gt -> Línea horizontal<br>
 		</p>
-	<h2>Parrafo</h2>
+	<header id="P5">Parrafo</header>
 		<p>br -> Salto de linea<br>
-			&ltpre&gt -> Formato predefinido para el texto <br><hr>
+			&ltpre&gt -> Formato predefinido para el texto <br>
 		</p>
-	<h2>Estilo</h2>
+	<header id="P6">Estilo</header>
 		<p>tag &ltstyle="property:value;"&gt<br>
 			&ltbody style="background-color:XXXX;"&gt<br>
 			&lth1/p style="color:XXXX;"&gt<br>
 			&lth1/p style="font-family:XXXX;"&gt<br>
 			&lth1/p style="font-size:XXXX%;"&gt<br>
-			&lth1 style="text-align:XXXX;"&gt<br><hr>
+			&lth1 style="text-align:XXXX;"&gt<br>
 		</p>
-	<h2>Formato</h2>
+	<header id="P7">Formato</header>
 		<p>&ltb&gt -> Negritas<br>
 			&ltstrong&gt -> Importante<br>
 			&lti&gt -> Italica<br>
@@ -56,20 +89,20 @@
 			&ltdel&gt -> Tachado<br>
 			&ltins&gt -> Rayado<br>
 			&ltsub&gt -> Subindice<br>
-			&ltsup&gt -> Superindice<br><hr>
+			&ltsup&gt -> Superindice<br>
 		</p>
-	<h2>Citas</h2>
+	<header id="P8">Citas</header>
 		<p>&ltq&gt -> Citas (Agrega comillas)<br>
 			&ltblockquote cite="URL"&gt<br>
 			&ltabbr title="XXXX"&gt -> Descripción<br>
 			&ltaddress&gt -> Información del contacto<br>
 			&ltcite&gt -> Formato de cita al texto<br>
-			&ltbdo dir="rtl"&gt -> Voltea el texto<br><hr>
+			&ltbdo dir="rtl"&gt -> Voltea el texto<br>
 		</p>
-	<h2>Comentario</h2>
-		<p>&lt!--comentario--&gt<br><hr>
+	<header id="P9">Comentario</header>
+		<p>&lt!--comentario--&gt<br>
 		</p>
-	<h2>Color</h2>
+	<header id="P10">Color</header>
 		<p>&lth1/p style="background-color:XXXX;"&gt<br>
 			&lth1/p style="color:XXXX;"&gt<br>
 			&lth1/p style="border:XXXXpx color;"&gt<br>
@@ -78,9 +111,9 @@
 			hex -> #rrggbb<br>
 			hsl -> (hue, saturation%, lightness%)<br>
 			rgba -> (r,g,b,a)<br>
-			hsla -> (hue, saturation%, lightness%, a)<br><hr>
+			hsla -> (hue, saturation%, lightness%, a)<br>
 		</p>
-	<h2>Links</h2>
+	<header id="P11">Links</header>
 		<p>&lt a href="direccion.asp"&gtTexto&lt/a&gt -> Local<br>
 			&lta href="URL" target="XXXX"&gtTexto&lt/a&gt<br>
 			XXXX:<br>
@@ -89,101 +122,101 @@
 			_parent <br>
 			_top <br>
 			framename<br>
-			&lta href ...&gt &lt img ...&gt &lt/a&gt -> Imagen como link<br><hr>
+			&lta href ...&gt &lt img ...&gt &lt/a&gt -> Imagen como link<br>
 		</p>
-	<h2>Bookmark</h2>
+	<header id="P12">Bookmark</header>
 		<p>&lth2 id="C1"&gtChapter 1&lt/h2&gt&lt/p&gt<br>
 			&lta href="#C1"&gtJump to Chapter 1&lt/a&gt<br>
-			&lta href="html_demo.html#C1"&gtJump to Chapter 1&lt/a&gt<br><hr>
+			&lta href="html_demo.html#C1"&gtJump to Chapter 1&lt/a&gt<br>
 		</p>
-	<h2>Imagenes</h2>
+	<header id="P13">Imagenes</header>
 		<p>&ltimg src="smiley.gif" alt="Smiley face" style="float:left;width:42px;height:42px;"&gt -> Alineación con el texto<br>
 		&ltbody style="background-image:url('imagen.jpg')"&gt
-		<hr>
 		</p>
-	<h2>Map</h2>
+	<header id="P14">Map</header>
 		<p>&ltimg src="workplace.jpg" alt="Workplace" usemap="#workmap"&gt<br>
 			&ltmap name="workmap"&gt<br>
 			&ltarea shape="rect" coords="34,44,270,350" alt="Computer" href="computer.htm"&gt<br>
-			&ltarea shape="circle" coords="337,300,44" alt="Coffee" href="coffee.htm"&gt<br><hr>
-	<h2>Picture</h2>
+			&ltarea shape="circle" coords="337,300,44" alt="Coffee" href="coffee.htm"&gt<br>
+	<header id="P15">Picture</header>
 		</p> &ltpicture&gt<br>
 		&ltsource media="(min-width: 650px)" srcset="img1.jpg"&gt<br>
 		&ltsource media="(min-width: 465px)" srcset="img2.jpg"&gt<br>
 		&ltimg src="img3.jpg" alt="XXXX" style="width:auto;"&gt<br>
-		&lt/picture&gt -> Diferent devices<br><hr>
+		&lt/picture&gt -> Diferent devices<br>
 		</p>
-	<h2>Tablas</h2>
+	<header id="P16">Tablas</header>
 		<p>&lttable style="width:XXXX%"&gt<br>
 			&lttr&gt -> renglon<br>
 			&ltth&gt -> encabezado<br>
 			&lttd&gt -> celda<br>
     		&ltth colspan="XXXX"&gtCampo&lt/th&gt<br>
     		&ltth rowspan="XXXX"&gtCampo:&lt/th&gt<br>
-    		&ltcaption&gtTitulo de la tabla&lt/caption&gt<br><hr>
+    		&ltcaption&gtTitulo de la tabla&lt/caption&gt<br>
     	</p>
-    <h2>Lista no ordenada</h2>
+    <header id="P17">Lista no ordenada</header>
     	<p>&ltul&gt<br>
     		&ltli&gt -> Elemento<br>
     		&ltul style="list-style-type:XXXX"&gt<br>
     		XXXX:<br>
-    		disc, circle, square, none <br><hr>
+    		disc, circle, square, none <br>
     	</p>
-    <h2>Lista ordenada</h2>
+    <header id="P18">Lista ordenada</header>
     	<p>&ltol&gt<br>
     		&ltli&gt -> Elemento<br>
     		&ltol type="XXXX"&gt<br>
     		XXXX:<br>
-    		1, A, a, I, i<br><hr>
+    		1, A, a, I, i<br>
     	</p>
-    <h2>Description List</h2>
+    <header id="P19">Description List</header>
     	<p>&ltdl&gt -> Tag<br>
     		&ltdt&gt -> Primer nivel<br>
-    		&ltdd&gt -> Segundo nivel<br><hr>
+    		&ltdd&gt -> Segundo nivel<br>
     	</p>
-    <h2>Blocks</h2>
+    <header id="P20">Blocks</header>
     	<p>&ltdiv&gt ->Container (style, class)<br>
-    		&ltspan&gt -> inline (style,class)<br><hr>
+    		&ltspan&gt -> inline (style,class)<br>
     	</p>
-    <h2>Iframe</h2>
+    <header id="P21">Iframe</header>
     	<p>&ltiframe src="URL" height="200" width="300"&gt<br>
     		&ltiframe src="demo.htm" style="border:none;"&gt<br>
     		&ltiframe src="demo_iframe.htm" name="iframe_a"&gt<br>
-    		&lta href="URL" target="iframe_a"&gt<br><hr>
+    		&lta href="URL" target="iframe_a"&gt<br>
     	</p>
-    <h2>File Paths</h2>
+    <header id="P22">File Paths</header>
     	<p>&ltimg src="XXXX"&gt<br>
     		folder/file -> Localizado en folder <br>
     		/folder/file -> root <br>
-    		../file -> level up<br><hr>
+    		../file -> level up<br>
     	</p>
-    <h2>Head</h2>
-    	<p>head, title, base, link, meta, script, style<br><hr>	
+    <header id="P23">Head</header>
+    	<p>head, title, base, link, meta, script, style<br>	
     	</p>
-    <h2>Viewport</h2>
-    	<p>&ltmeta name="viewport" content="width=device-width, initial-scale=1.0"&gt<br><hr>
+    <header id="P24">Viewport</header>
+    	<p>&ltmeta name="viewport" content="width=device-width, initial-scale=1.0"&gt<br>
     	</p>
-    <h2>Base</h2>
-    	<p>&ltbase href="URL" target="_blank"&gt -> Lugar de busqueda por default<br><hr>
+    <header id="P25">Base</header>
+    	<p>&ltbase href="URL" target="_blank"&gt -> Lugar de busqueda por default<br>
     	</p>
-    <h2>Responsive</h2>
+    <header id="P26">Responsive</header>
     	<p>&ltimg src="img_girl.jpg" style="max-width:100%;height:auto;"&gt -> Tamaño original maximo<br>
-    		&lth1 style="font-size:10vw"&gt -> Texto ajustable <br><hr>
+    		&lth1 style="font-size:10vw"&gt -> Texto ajustable <br>
     	</p>
-    <h2>Code</h2>
+    <header id="P27">Code</header>
     	<p>&ltcode&gt<br>
     		&ltkbd&gt -> User input, browsers font <br>
     		&ltsamp&gt -> Output, browsers font<br>
     		&ltpre&gt &ltcode&gt -> Saltos de linea<br>
-    		&ltvar&gt -> Programming context<br></p>
-    <h2>Entities</h2>
+    		&ltvar&gt -> Programming context<br>
+    	</p>
+    <header id="P28">Entities</header>
     	<p>& nbsp -> Espacio que no salta la linea<br>
-    	letra & #769 <br><hr>
+    	letra & #769 <br>
     	</p>
-    <h2>HTML5</h2>
-    	<p>&ltmeta charset="UTF-8"&gt ->Display adecuado<br><hr>
+    <header id="P29">HTML5</header>
+    	<p>&ltmeta charset="UTF-8"&gt ->Display adecuado<br>
     	</p>
-    <h2>URL</h2>
+    <header id="P30">URL</header>
     	<p>scheme://prefix.domain:port/path/filename
     	</p>
 </body>
