--- a/HTML/firsthtml.html
+++ b/HTML/firsthtml.html
@@ -4,13 +4,13 @@
 	<title>HTML</title>
 	<style>
 	header{
+		padding:0;
 		background-color: black;
 		color:white;
-		border-bottom:5px solid grey;
-		background-color:black;
+		border-bottom:10px solid black;
+		background-color:grey;
 		font-family: Arial, Helvetica, sans-serif;
 	}
-
 	p{
 		padding-top: 100px;
 		text-align: justify;
@@ -34,7 +34,7 @@
 </style>
 </head>
 <body>
-	<header id="INTRO">Introducción</header>
+	<header id="INTRO">Inicio</header>
 		<p> 
 			<img src="../IMAGES/html.png" alt="Logo" height="258.5px" width="300px"> HTML es un lenguaje estandarizado para la programación de páginas web.<br><br><br><br><br><br><br><br><br><br><br><br><br><hr>
 		</p>
@@ -47,12 +47,12 @@
 			&ltbody&gt = parte visible del documento<br>
 			&lth1&gt = encabezado largo<br>
 			&ltp&gt = parrafo<br>
-			&lt/endtag&gt<br>
+			&lt/endtag&gt<br><br><br><br><br><br><br><br><br><br>
 		</p>
 	<header id="P2">TextEdit </header>
 		<p>Preferences-> Format-> Plain text<br>
 			archivo.htm<br>
-			UTF-8 ENCODING<br>
+			UTF-8 ENCODING<br><br><br><br><br><br><br><br><br><br>
 		</p>
 	<header id="P3">Atributos de los elementos</header>
 		<p>&lta href="URL"&gtText&lt/a&gt -> Links<br>
@@ -60,16 +60,16 @@
 			&ltp style="color:XXXX"&gt<br>
 			&lthtml lang="en-US"&gt<br>
 			&ltp title="leyenda"&gt<br>
-			*Comillas simples entre comillas dobles<br>
+			*Comillas simples entre comillas dobles<br><br><br><br><br><br><br><br><br><br>
 		</p>
 	<header id="P4">Encabezados</header>
 		<p>h-num; num= tamaño de la letra (1-6)<br>
 			&lth1 style="font-size:XXXXpx;"&gt<br>
-			&lthr&gt -> Línea horizontal<br>
+			&lthr&gt -> Línea horizontal<br><br><br><br><br><br><br><br><br><br>
 		</p>
 	<header id="P5">Parrafo</header>
 		<p>br -> Salto de linea<br>
-			&ltpre&gt -> Formato predefinido para el texto <br>
+			&ltpre&gt -> Formato predefinido para el texto<br><br><br><br><br><br><br><br><br><br>
 		</p>
 	<header id="P6">Estilo</header>
 		<p>tag &ltstyle="property:value;"&gt<br>
@@ -77,7 +77,7 @@
 			&lth1/p style="color:XXXX;"&gt<br>
 			&lth1/p style="font-family:XXXX;"&gt<br>
 			&lth1/p style="font-size:XXXX%;"&gt<br>
-			&lth1 style="text-align:XXXX;"&gt<br>
+			&lth1 style="text-align:XXXX;"&gt<br><br><br><br><br><br><br><br><br><br>
 		</p>
 	<header id="P7">Formato</header>
 		<p>&ltb&gt -> Negritas<br>
@@ -89,7 +89,7 @@
 			&ltdel&gt -> Tachado<br>
 			&ltins&gt -> Rayado<br>
 			&ltsub&gt -> Subindice<br>
-			&ltsup&gt -> Superindice<br>
+			&ltsup&gt -> Superindice<br><br><br><br><br><br><br><br><br><br>
 		</p>
 	<header id="P8">Citas</header>
 		<p>&ltq&gt -> Citas (Agrega comillas)<br>
@@ -97,10 +97,10 @@
 			&ltabbr title="XXXX"&gt -> Descripción<br>
 			&ltaddress&gt -> Información del contacto<br>
 			&ltcite&gt -> Formato de cita al texto<br>
-			&ltbdo dir="rtl"&gt -> Voltea el texto<br>
+			&ltbdo dir="rtl"&gt -> Voltea el texto<br><br><br><br><br><br><br><br><br><br>
 		</p>
 	<header id="P9">Comentario</header>
-		<p>&lt!--comentario--&gt<br>
+		<p>&lt!--comentario--&gt<br><br><br><br><br><br><br><br><br><br>
 		</p>
 	<header id="P10">Color</header>
 		<p>&lth1/p style="background-color:XXXX;"&gt<br>
@@ -111,7 +111,7 @@
 			hex -> #rrggbb<br>
 			hsl -> (hue, saturation%, lightness%)<br>
 			rgba -> (r,g,b,a)<br>
-			hsla -> (hue, saturation%, lightness%, a)<br>
+			hsla -> (hue, saturation%, lightness%, a)<br><br><br><br><br><br><br><br><br><br>
 		</p>
 	<header id="P11">Links</header>
 		<p>&lt a href="direccion.asp"&gtTexto&lt/a&gt -> Local<br>
@@ -122,28 +122,29 @@
 			_parent <br>
 			_top <br>
 			framename<br>
-			&lta href ...&gt &lt img ...&gt &lt/a&gt -> Imagen como link<br>
+			&lta href ...&gt &lt img ...&gt &lt/a&gt -> Imagen como link<br><br><br><br><br><br><br><br><br><br>
 		</p>
 	<header id="P12">Bookmark</header>
 		<p>&lth2 id="C1"&gtChapter 1&lt/h2&gt&lt/p&gt<br>
 			&lta href="#C1"&gtJump to Chapter 1&lt/a&gt<br>
-			&lta href="html_demo.html#C1"&gtJump to Chapter 1&lt/a&gt<br>
+			&lta href="html_demo.html#C1"&gtJump to Chapter 1&lt/a&gt<br><br><br><br><br><br><br><br><br><br>
 		</p>
 	<header id="P13">Imagenes</header>
 		<p>&ltimg src="smiley.gif" alt="Smiley face" style="float:left;width:42px;height:42px;"&gt -> Alineación con el texto<br>
-		&ltbody style="background-image:url('imagen.jpg')"&gt
+		&ltbody style="background-image:url('imagen.jpg')"&gt<br><br><br><br><br><br><br><br><br><br>
 		</p>
 	<header id="P14">Map</header>
 		<p>&ltimg src="workplace.jpg" alt="Workplace" usemap="#workmap"&gt<br>
 			&ltmap name="workmap"&gt<br>
 			&ltarea shape="rect" coords="34,44,270,350" alt="Computer" href="computer.htm"&gt<br>
-			&ltarea shape="circle" coords="337,300,44" alt="Coffee" href="coffee.htm"&gt<br>
+			&ltarea shape="circle" coords="337,300,44" alt="Coffee" href="coffee.htm"&gt<br><br><br><br><br><br><br><br><br><br>
+		</p>
 	<header id="P15">Picture</header>
-		</p> &ltpicture&gt<br>
+		<p> &ltpicture&gt<br>
 		&ltsource media="(min-width: 650px)" srcset="img1.jpg"&gt<br>
 		&ltsource media="(min-width: 465px)" srcset="img2.jpg"&gt<br>
 		&ltimg src="img3.jpg" alt="XXXX" style="width:auto;"&gt<br>
-		&lt/picture&gt -> Diferent devices<br>
+		&lt/picture&gt -> Diferent devices<br><br><br><br><br><br><br><br><br><br>
 		</p>
 	<header id="P16">Tablas</header>
 		<p>&lttable style="width:XXXX%"&gt<br>
@@ -152,72 +153,72 @@
 			&lttd&gt -> celda<br>
     		&ltth colspan="XXXX"&gtCampo&lt/th&gt<br>
     		&ltth rowspan="XXXX"&gtCampo:&lt/th&gt<br>
-    		&ltcaption&gtTitulo de la tabla&lt/caption&gt<br>
+    		&ltcaption&gtTitulo de la tabla&lt/caption&gt<br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P17">Lista no ordenada</header>
     	<p>&ltul&gt<br>
     		&ltli&gt -> Elemento<br>
     		&ltul style="list-style-type:XXXX"&gt<br>
     		XXXX:<br>
-    		disc, circle, square, none <br>
+    		disc, circle, square, none<br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P18">Lista ordenada</header>
     	<p>&ltol&gt<br>
     		&ltli&gt -> Elemento<br>
     		&ltol type="XXXX"&gt<br>
     		XXXX:<br>
-    		1, A, a, I, i<br>
+    		1, A, a, I, i<br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P19">Description List</header>
     	<p>&ltdl&gt -> Tag<br>
     		&ltdt&gt -> Primer nivel<br>
-    		&ltdd&gt -> Segundo nivel<br>
+    		&ltdd&gt -> Segundo nivel<br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P20">Blocks</header>
     	<p>&ltdiv&gt ->Container (style, class)<br>
-    		&ltspan&gt -> inline (style,class)<br>
+    		&ltspan&gt -> inline (style,class)<br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P21">Iframe</header>
     	<p>&ltiframe src="URL" height="200" width="300"&gt<br>
     		&ltiframe src="demo.htm" style="border:none;"&gt<br>
     		&ltiframe src="demo_iframe.htm" name="iframe_a"&gt<br>
-    		&lta href="URL" target="iframe_a"&gt<br>
+    		&lta href="URL" target="iframe_a"&gt<br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P22">File Paths</header>
     	<p>&ltimg src="XXXX"&gt<br>
     		folder/file -> Localizado en folder <br>
     		/folder/file -> root <br>
-    		../file -> level up<br>
+    		../file -> level up<br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P23">Head</header>
-    	<p>head, title, base, link, meta, script, style<br>	
+    	<p>head, title, base, link, meta, script, style<br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P24">Viewport</header>
-    	<p>&ltmeta name="viewport" content="width=device-width, initial-scale=1.0"&gt<br>
+    	<p>&ltmeta name="viewport" content="width=device-width, initial-scale=1.0"&gt<br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P25">Base</header>
-    	<p>&ltbase href="URL" target="_blank"&gt -> Lugar de busqueda por default<br>
+    	<p>&ltbase href="URL" target="_blank"&gt -> Lugar de busqueda por default<br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P26">Responsive</header>
     	<p>&ltimg src="img_girl.jpg" style="max-width:100%;height:auto;"&gt -> Tamaño original maximo<br>
-    		&lth1 style="font-size:10vw"&gt -> Texto ajustable <br>
+    		&lth1 style="font-size:10vw"&gt -> Texto ajustable <br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P27">Code</header>
     	<p>&ltcode&gt<br>
     		&ltkbd&gt -> User input, browsers font <br>
     		&ltsamp&gt -> Output, browsers font<br>
     		&ltpre&gt &ltcode&gt -> Saltos de linea<br>
-    		&ltvar&gt -> Programming context<br>
+    		&ltvar&gt -> Programming context<br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P28">Entities</header>
     	<p>& nbsp -> Espacio que no salta la linea<br>
-    	letra & #769 <br>
+    	letra & #769 <br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P29">HTML5</header>
-    	<p>&ltmeta charset="UTF-8"&gt ->Display adecuado<br>
+    	<p>&ltmeta charset="UTF-8"&gt ->Display adecuado<br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P30">URL</header>
-    	<p>scheme://prefix.domain:port/path/filename
+    	<p>scheme://prefix.domain:port/path/filename<br><br><br><br><br><br><br><br><br><br>
     	</p>
 </body>
 </html>
