--- a/HTML/page.html
+++ b/HTML/page.html
@@ -7,17 +7,16 @@
 <link rel="stylesheet" type="text/css" href="../CSS/page.css">
 </head>
 <body>
-	<div class=header>
+	<div class="header">
 		<h1>HyperText Markup Language
 		</h1>
 	</div>
-	<div class=nav>
 	<ul>
 	  <li><a href="firsthtml.html#INTRO" target="iframe_a">Inicio</a></li>
 	  <li class="dropdown">
 	    <a href="javascript:void(0)" class="dropbtn">Contenido</a>
 	    <div class="dropdown-content">
-	      <a href="firsthtml.html#P1" target="iframe_a">HTML</a>
+	      <a href="firsthtml.html#P1" target="iframe_a">Elementos</a>
 		  <a href="firsthtml.html#P2" target="iframe_a">TextEdit</a>
 		  <a href="firsthtml.html#P3" target="iframe_a">Atributos de los elementos</a>
 		  <a href="firsthtml.html#P4" target="iframe_a">Encabezados</a>
@@ -27,7 +26,6 @@
 		  <a href="firsthtml.html#P8" target="iframe_a">Citas</a>
 		  <a href="firsthtml.html#P9" target="iframe_a">Comentario</a>
 		  <a href="firsthtml.html#P10" target="iframe_a">Color</a>
-	    </div>
 	  </li>
 	  <li class="dropdown">
 	    <a href="javascript:void(0)" class="dropbtn">+ Contenido</a>
@@ -42,7 +40,6 @@
 		  <a href="firsthtml.html#P18" target="iframe_a">Lista ordenada</a>
 		  <a href="firsthtml.html#P19" target="iframe_a">Description List</a>
 		  <a href="firsthtml.html#P20" target="iframe_a">Blocks</a>
-	    </div>
 	  </li>
 	  <li class="dropdown">
 	    <a href="javascript:void(0)" class="dropbtn">Aún + Contenido</a>
@@ -57,20 +54,14 @@
 		  <a href="firsthtml.html#P28" target="iframe_a">Entities</a>
 		  <a href="firsthtml.html#P29" target="iframe_a">HTML5</a>
 		  <a href="firsthtml.html#P30" target="iframe_a">URL</a>
-	    </div>
 	  </li>
-	  <li><a href="firsthtml.html#INTRO" target="iframe_a">Acerca</a></li>
 	</ul>
-	</div>
 	<div>
-		<iframe height="500px" width="100%" src="firsthtml.html" name="iframe_a">
-		</iframe>
+	<iframe class="if" src="firsthtml.html" name="iframe_a">
+	</iframe>
 	</div>
 	<div class="footer">
-		<p>
-			Ciudad de México, 2018.
-		</p>
+		Ciudad de México, 2018
 	</div>
-
 </body>
 </html>
