--- a/HTML/firsthtml.html
+++ b/HTML/firsthtml.html
@@ -1,42 +1,13 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-	<title>HTML</title>
-	<style>
-	header{
-		padding:0;
-		background-color: black;
-		color:white;
-		border-bottom:10px solid black;
-		background-color:grey;
-		font-family: Arial, Helvetica, sans-serif;
-	}
-	p{
-		padding-top: 100px;
-		text-align: justify;
-		text-decoration: none;	
-		font-family: Arial, Helvetica, sans-serif;
-		letter-spacing: 3px;
-		line-height: 1.8;
-		font-size:20px;
-		}
-
-	img{
-		float:left;
-		text-align: justify;
-		}
-	header{
-		text-decoration: bold;
-		margin-top:20px;
-		font-size:40px;
-		text-align:center;
-	}
-</style>
+<title>HTML</title>
+<link rel="stylesheet" type="text/css" href="../CSS/firsthtml.css">
 </head>
 <body>
 	<header id="INTRO">Inicio</header>
 		<p> 
-			<img src="../IMAGES/html.png" alt="Logo" height="258.5px" width="300px"> HTML es un lenguaje estandarizado para la programación de páginas web.<br><br><br><br><br><br><br><br><br><br><br><br><br><hr>
+			<img src="../IMAGES/html.png" alt="Logo" height="258.5px" width="300px"> HTML es un lenguaje de marcado para la elaboración de páginas web. Es un estándar que sirve de referencia del software que conecta con la elaboración de páginas web en sus diferentes versiones, define una estructura básica y un código (denominado código HTML) para la definición de contenido de una página web, como texto, imágenes, videos, juegos, entre otros. <br><br><br><br><br><br><br><br><br><br><br><br><br><hr>
 		</p>
 	<header id="P1">Elementos</header>
 		<p>!DOCTYPE html = HTML5<br>
@@ -67,7 +38,7 @@
 			&lth1 style="font-size:XXXXpx;"&gt<br>
 			&lthr&gt -> Línea horizontal<br><br><br><br><br><br><br><br><br><br>
 		</p>
-	<header id="P5">Parrafo</header>
+	<header id="P5">Párrafo</header>
 		<p>br -> Salto de linea<br>
 			&ltpre&gt -> Formato predefinido para el texto<br><br><br><br><br><br><br><br><br><br>
 		</p>
@@ -100,7 +71,7 @@
 			&ltbdo dir="rtl"&gt -> Voltea el texto<br><br><br><br><br><br><br><br><br><br>
 		</p>
 	<header id="P9">Comentario</header>
-		<p>&lt!--comentario--&gt<br><br><br><br><br><br><br><br><br><br>
+		<p>&lt!--comentario--&gt<br><br><br><br><br><br><br><br><br><br><br><br>
 		</p>
 	<header id="P10">Color</header>
 		<p>&lth1/p style="background-color:XXXX;"&gt<br>
@@ -129,7 +100,7 @@
 			&lta href="#C1"&gtJump to Chapter 1&lt/a&gt<br>
 			&lta href="html_demo.html#C1"&gtJump to Chapter 1&lt/a&gt<br><br><br><br><br><br><br><br><br><br>
 		</p>
-	<header id="P13">Imagenes</header>
+	<header id="P13">Imágenes</header>
 		<p>&ltimg src="smiley.gif" alt="Smiley face" style="float:left;width:42px;height:42px;"&gt -> Alineación con el texto<br>
 		&ltbody style="background-image:url('imagen.jpg')"&gt<br><br><br><br><br><br><br><br><br><br>
 		</p>
@@ -191,13 +162,13 @@
     		../file -> level up<br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P23">Head</header>
-    	<p>head, title, base, link, meta, script, style<br><br><br><br><br><br><br><br><br><br>
+    	<p>head, title, base, link, meta, script, style<br><br><br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P24">Viewport</header>
-    	<p>&ltmeta name="viewport" content="width=device-width, initial-scale=1.0"&gt<br><br><br><br><br><br><br><br><br><br>
+    	<p>&ltmeta name="viewport" content="width=device-width, initial-scale=1.0"&gt<br><br><br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P25">Base</header>
-    	<p>&ltbase href="URL" target="_blank"&gt -> Lugar de busqueda por default<br><br><br><br><br><br><br><br><br><br>
+    	<p>&ltbase href="URL" target="_blank"&gt -> Lugar de busqueda por default<br><br><br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P26">Responsive</header>
     	<p>&ltimg src="img_girl.jpg" style="max-width:100%;height:auto;"&gt -> Tamaño original maximo<br>
@@ -215,7 +186,7 @@
     	letra & #769 <br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P29">HTML5</header>
-    	<p>&ltmeta charset="UTF-8"&gt ->Display adecuado<br><br><br><br><br><br><br><br><br><br>
+    	<p>&ltmeta charset="UTF-8"&gt ->Display adecuado<br><br><br><br><br><br><br><br><br><br><br><br>
     	</p>
     <header id="P30">URL</header>
     	<p>scheme://prefix.domain:port/path/filename<br><br><br><br><br><br><br><br><br><br>
