--- a/HTML/page.html
+++ b/HTML/page.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>
 	HTML
 </title>
@@ -13,47 +14,36 @@
 	</div>
 	<ul>
 	  <li><a href="firsthtml.html#INTRO" target="iframe_a">Inicio</a></li>
-	  <li class="dropdown">
-	    <a href="javascript:void(0)" class="dropbtn">Contenido</a>
-	    <div class="dropdown-content">
-	      <a href="firsthtml.html#P1" target="iframe_a">Elementos</a>
-		  <a href="firsthtml.html#P2" target="iframe_a">TextEdit</a>
-		  <a href="firsthtml.html#P3" target="iframe_a">Atributos de los elementos</a>
-		  <a href="firsthtml.html#P4" target="iframe_a">Encabezados</a>
-		  <a href="firsthtml.html#P5" target="iframe_a">Párrafo</a>
-		  <a href="firsthtml.html#P6" target="iframe_a">Estilo</a>
-		  <a href="firsthtml.html#P7" target="iframe_a">Formato</a>
-		  <a href="firsthtml.html#P8" target="iframe_a">Citas</a>
-		  <a href="firsthtml.html#P9" target="iframe_a">Comentario</a>
-		  <a href="firsthtml.html#P10" target="iframe_a">Color</a>
-	  </li>
-	  <li class="dropdown">
-	    <a href="javascript:void(0)" class="dropbtn">+ Contenido</a>
-	    <div class="dropdown-content">
-		  <a href="firsthtml.html#P11" target="iframe_a">Links</a>
-		  <a href="firsthtml.html#P12" target="iframe_a">Bookmark</a>
-		  <a href="firsthtml.html#P13" target="iframe_a">Imágenes</a>
-		  <a href="firsthtml.html#P14" target="iframe_a">Map</a>
-		  <a href="firsthtml.html#P15" target="iframe_a">Picture</a>
-		  <a href="firsthtml.html#P16" target="iframe_a">Tablas</a>
-		  <a href="firsthtml.html#P17" target="iframe_a">Lista no ordenada</a>
-		  <a href="firsthtml.html#P18" target="iframe_a">Lista ordenada</a>
-		  <a href="firsthtml.html#P19" target="iframe_a">Description List</a>
-		  <a href="firsthtml.html#P20" target="iframe_a">Blocks</a>
-	  </li>
-	  <li class="dropdown">
-	    <a href="javascript:void(0)" class="dropbtn">Aún + Contenido</a>
-	    <div class="dropdown-content">
-		  <a href="firsthtml.html#P21" target="iframe_a">Iframe</a>
-		  <a href="firsthtml.html#P22" target="iframe_a">File Paths</a>
-		  <a href="firsthtml.html#P23" target="iframe_a">Head</a>
-		  <a href="firsthtml.html#P24" target="iframe_a">Viewport</a>
-		  <a href="firsthtml.html#P25" target="iframe_a">Base</a>
-		  <a href="firsthtml.html#P26" target="iframe_a">Responsive</a>
-		  <a href="firsthtml.html#P27" target="iframe_a">Code</a>
-		  <a href="firsthtml.html#P28" target="iframe_a">Entities</a>
-		  <a href="firsthtml.html#P29" target="iframe_a">HTML5</a>
-		  <a href="firsthtml.html#P30" target="iframe_a">URL</a>
+	  <li><a href="firsthtml.html#P1" target="iframe_a">Elementos</a></li>
+	  <li><a href="firsthtml.html#P2" target="iframe_a">TextEdit</a>	  
+	  <li><a href="firsthtml.html#P3" target="iframe_a">Atributos</a>
+	  <li><a href="firsthtml.html#P4" target="iframe_a">Encabezados</a>
+	  <li><a href="firsthtml.html#P5" target="iframe_a">Párrafo</a>
+	  <li><a href="firsthtml.html#P6" target="iframe_a">Estilo</a>
+	  <li><a href="firsthtml.html#P7" target="iframe_a">Formato</a>
+	  <li><a href="firsthtml.html#P8" target="iframe_a">Citas</a>
+	  <li><a href="firsthtml.html#P9" target="iframe_a">Comentario</a>
+	  <li><a href="firsthtml.html#P10" target="iframe_a">Color</a>
+	  <li><a href="firsthtml.html#P11" target="iframe_a">Links</a>
+	  <li><a href="firsthtml.html#P12" target="iframe_a">Bookmark</a>
+	  <li><a href="firsthtml.html#P13" target="iframe_a">Imágenes</a>
+	  <li><a href="firsthtml.html#P14" target="iframe_a">Map</a>
+	  <li><a href="firsthtml.html#P15" target="iframe_a">Picture</a>
+	  <li><a href="firsthtml.html#P16" target="iframe_a">Tablas</a>
+	  <li><a href="firsthtml.html#P17" target="iframe_a">Lista no ordenada</a>
+	  <li><a href="firsthtml.html#P18" target="iframe_a">Lista ordenada</a>
+	  <li><a href="firsthtml.html#P19" target="iframe_a">Description List</a>
+	  <li><a href="firsthtml.html#P20" target="iframe_a">Blocks</a>
+	  <li><a href="firsthtml.html#P21" target="iframe_a">Iframe</a>
+	  <li><a href="firsthtml.html#P22" target="iframe_a">File Paths</a>
+	  <li><a href="firsthtml.html#P23" target="iframe_a">Head</a>
+	  <li><a href="firsthtml.html#P24" target="iframe_a">Viewport</a>
+	  <li><a href="firsthtml.html#P25" target="iframe_a">Base</a>
+	  <li><a href="firsthtml.html#P26" target="iframe_a">Responsive</a>
+	  <li><a href="firsthtml.html#P27" target="iframe_a">Code</a>
+	  <li><a href="firsthtml.html#P28" target="iframe_a">Entities</a>
+	  <li><a href="firsthtml.html#P29" target="iframe_a">HTML5</a>
+	  <li><a href="firsthtml.html#P30" target="iframe_a">URL</a>
 	  </li>
 	</ul>
 	<div>
