--- a/HTML/firsthtml.html
+++ b/HTML/firsthtml.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+	<meta charset="utf-8">
 <title>HTML</title>
 <link rel="stylesheet" type="text/css" href="../CSS/firsthtml.css">
 </head>
