--- a/HTML/firsthtml.html
+++ b/HTML/firsthtml.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 	<header id="INTRO">Inicio</header>
-		<p> 
-			<img src="../IMAGES/html.png" alt="Logo" height="258.5px" width="300px"> HTML es un lenguaje de marcado para la elaboración de páginas web. Es un estándar que sirve de referencia del software que conecta con la elaboración de páginas web en sus diferentes versiones, define una estructura básica y un código (denominado código HTML) para la definición de contenido de una página web, como texto, imágenes, videos, juegos, entre otros. <br><br><br><br><br><br><br><br><br><br><br><br><br><hr>
-		</p>
+		<img src="../IMAGES/html.png" alt="Logo" class="logo">
+<p class="cuerpo">HTML es un lenguaje de marcado para la elaboración de páginas web. Es un estándar que sirve de referencia del software que conecta con la elaboración de páginas web en sus diferentes versiones, define una estructura básica y un código (denominado código HTML) para la definición de contenido de una página web, como texto, imágenes, videos, juegos, entre otros.
+</p>
 	<header id="P1">Elementos</header>
 		<p>!DOCTYPE html = HTML5<br>
 			&lttag&gt<br>
