--- a/HTML/pagina.html
+++ b/HTML/pagina.html
@@ -4,66 +4,90 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../CSS/pagina.css">
-  <script type="text/javascript" src="../CSS/pagina.js"></script>
 </head>
 <body>
   <div class=h>
     <h1>HyperText Markup Language</h1>
   </div>
-<div class="topnav" id="myTopnav">
-  <a href="pagina.html" class="active">Inicio</a>
+  <div class="navbar">
+  <a href="pagina.html">Home</a>
   <div class="dropdown">
     <button class="dropbtn">Contenido 
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
-    <a href="firsthtml.html#P1" target="iframe_a">Elementos</a>
-    <a href="firsthtml.html#P2" target="iframe_a">TextEdit</a>    
-    <a href="firsthtml.html#P3" target="iframe_a">Atributos</a>
-    <a href="firsthtml.html#P4" target="iframe_a">Encabezados</a>
-    <a href="firsthtml.html#P5" target="iframe_a">Párrafo</a>
-    <a href="firsthtml.html#P6" target="iframe_a">Estilo</a>
-    <a href="firsthtml.html#P7" target="iframe_a">Formato</a>
-    <a href="firsthtml.html#P8" target="iframe_a">Citas</a>
-    <a href="firsthtml.html#P9" target="iframe_a">Comentario</a>
-    <a href="firsthtml.html#P10" target="iframe_a">Color</a>
-    </div>
-  </div>
-    <div class="dropdown">
-    <button class="dropbtn">Contenido 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">
-    <a href="firsthtml.html#P11" target="iframe_a">Links</a>
-    <a href="firsthtml.html#P12" target="iframe_a">Bookmark</a>
-    <a href="firsthtml.html#P13" target="iframe_a">Imágenes</a>
-    <a href="firsthtml.html#P14" target="iframe_a">Map</a>
-    <a href="firsthtml.html#P15" target="iframe_a">Picture</a>
-    <a href="firsthtml.html#P16" target="iframe_a">Tablas</a>
-    <a href="firsthtml.html#P17" target="iframe_a">Lista no ordenada</a>
-    <a href="firsthtml.html#P18" target="iframe_a">Lista ordenada</a>
-    <a href="firsthtml.html#P19" target="iframe_a">Description List</a>
-    <a href="firsthtml.html#P20" target="iframe_a">Blocks</a>
-    </div>
-  </div>
-    <div class="dropdown">
-    <button class="dropbtn">Contenido 
-      <i class="fa fa-caret-down"></i>
-    </button>
-    <div class="dropdown-content">    
-    <a href="firsthtml.html#P21" target="iframe_a">Iframe</a>
-    <a href="firsthtml.html#P22" target="iframe_a">File Paths</a>
-    <a href="firsthtml.html#P23" target="iframe_a">Head</a>
-    <a href="firsthtml.html#P24" target="iframe_a">Viewport</a>
-    <a href="firsthtml.html#P25" target="iframe_a">Base</a>
-    <a href="firsthtml.html#P26" target="iframe_a">Responsive</a>
-    <a href="firsthtml.html#P27" target="iframe_a">Code</a>
-    <a href="firsthtml.html#P28" target="iframe_a">Entities</a>
-    <a href="firsthtml.html#P29" target="iframe_a">HTML5</a>
-    <a href="firsthtml.html#P30" target="iframe_a">URL</a>
+      <div class="header">
+        <h2>HTML</h2>
+      </div> 
+      <div class="row">
+        <div class="column">
+          <h3>Contenido 1</h3>
+          <a href="firsthtml.html#P1" target="iframe_a">Elementos</a>
+          <a href="firsthtml.html#P2" target="iframe_a">TextEdit</a>    
+          <a href="firsthtml.html#P3" target="iframe_a">Atributos</a>
+
+        </div>
+        <div class="column">
+          <h3>Contenido 2</h3>
+          <a href="firsthtml.html#P4" target="iframe_a">Encabezados</a> 
+          <a href="firsthtml.html#P5" target="iframe_a">Párrafo</a>         
+          <a href="firsthtml.html#P6" target="iframe_a">Estilo</a>
+        </div>
+        <div class="column">
+          <h3>Contenido 3</h3> 
+          <a href="firsthtml.html#P7" target="iframe_a">Formato</a>
+          <a href="firsthtml.html#P8" target="iframe_a">Citas</a>
+          <a href="firsthtml.html#P9" target="iframe_a">Comentario</a>
+        </div>
+        <div class="column">
+          <h3>Contenido 4</h3> 
+          <a href="firsthtml.html#P10" target="iframe_a">Color</a>
+          <a href="firsthtml.html#P11" target="iframe_a">Links</a>
+          <a href="firsthtml.html#P12" target="iframe_a">Bookmark</a>
+        </div>
+        <div class="column">
+          <h3>Contenido 5</h3> 
+          <a href="firsthtml.html#P13" target="iframe_a">Imágenes</a>
+          <a href="firsthtml.html#P14" target="iframe_a">Map</a>
+          <a href="firsthtml.html#P15" target="iframe_a">Picture</a>
+        </div>
+        <div class="column">
+          <h3>Contenido 6</h3>          
+          <a href="firsthtml.html#P16" target="iframe_a">Tablas</a>
+          <a href="firsthtml.html#P17" target="iframe_a">Lista no ordenada</a>
+          <a href="firsthtml.html#P18" target="iframe_a">Lista ordenada</a>
+        </div>
+        <div class="column">
+          <h3>Contenido 7</h3> 
+          <a href="firsthtml.html#P19" target="iframe_a">Description List</a>
+          <a href="firsthtml.html#P20" target="iframe_a">Blocks</a>
+          <a href="firsthtml.html#P21" target="iframe_a">Iframe</a>
+        </div>
+        <div class="column">
+          <h3>Contenido 8</h3> 
+          <a href="firsthtml.html#P22" target="iframe_a">File Paths</a>
+          <a href="firsthtml.html#P23" target="iframe_a">Head</a>
+          <a href="firsthtml.html#P24" target="iframe_a">Viewport</a>
+        </div>
+        <div class="column">
+          <h3>Contenido 9</h3> 
+          <a href="firsthtml.html#P25" target="iframe_a">Base</a>
+          <a href="firsthtml.html#P26" target="iframe_a">Responsive</a>
+          <a href="firsthtml.html#P27" target="iframe_a">Code</a>
+        </div>
+        <div class="column">
+          <h3>Contenido 10</h3> 
+          <a href="firsthtml.html#P28" target="iframe_a">Entities</a>
+          <a href="firsthtml.html#P29" target="iframe_a">HTML5</a>
+          <a href="firsthtml.html#P30" target="iframe_a">URL</a>
+        </div>
+      </div>
     </div>
   </div> 
-  <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+</div>
+<div>
+  <iframe src="intro.html" name="iframe_a" height="500px" width="100%" style="border:none; ">
+  </iframe>
 </div>
 </body>
 </html>
